@@ -3,6 +3,7 @@
    You can adapt this file completely to your liking, but it should at least
    contain the root `toctree` directive.
 
+================================
 Welcome to nmap's documentation!
 ================================
 
@@ -14,6 +15,7 @@ Contents:
    nmap
 
 
+==================
 Indices and tables
 ==================
 
