@@ -6,7 +6,7 @@
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>nmap</strong></big></big> (version 0.3.4)</font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>nmap</strong></big></big> (version 0.3.5)</font></td
 ><td align=right valign=bottom
 ><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/home/xael/ESPACE_KM/python/python-nmap/nmap/nmap.py">/home/xael/ESPACE_KM/python/python-nmap/nmap/nmap.py</a></font></td></tr></table>
     <p><tt>nmap.py&nbsp;-&nbsp;version&nbsp;and&nbsp;date,&nbsp;see&nbsp;below<br>
@@ -44,7 +44,7 @@ along&nbsp;with&nbsp;this&nbsp;program.&nbsp;&nbsp;If&nbsp;not,&nbsp;see&nbsp;&l
 &nbsp;<br>
 &nbsp;<br>
 Test&nbsp;strings&nbsp;:<br>
-^^^^^^^^^^^^<br>
+^^^^^^^^^^^^^^<br>
 &gt;&gt;&gt;&nbsp;import&nbsp;nmap<br>
 &gt;&gt;&gt;&nbsp;if&nbsp;__get_last_online_version()&nbsp;!=&nbsp;__version__:<br>
 ...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;raise&nbsp;ValueError('Current&nbsp;version&nbsp;is&nbsp;{0}&nbsp;-&nbsp;Last&nbsp;published&nbsp;version&nbsp;is&nbsp;{1}'.format(__version__,&nbsp;__get_last_online_version()))<br>
@@ -68,7 +68,7 @@ True<br>
 &gt;&gt;&gt;&nbsp;nm['74.207.244.221'].state()<br>
 'up'<br>
 &gt;&gt;&gt;&nbsp;nm['74.207.244.221'].all_protocols()<br>
-['addresses',&nbsp;'tcp',&nbsp;'vendor']<br>
+['tcp']<br>
 &gt;&gt;&gt;&nbsp;nm['74.207.244.221']['tcp'].keys()<br>
 dict_keys([80,&nbsp;9929,&nbsp;22])<br>
 &gt;&gt;&gt;&nbsp;nm['74.207.244.221'].has_tcp(22)<br>
@@ -545,7 +545,8 @@ Data descriptors inherited from <a href="nmap.html#PortScannerAsync">PortScanner
 <font color="#ffffff" face="helvetica, arial"><big><strong>Functions</strong></big></font></td></tr>
     
 <tr><td bgcolor="#eeaa77"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
-<td width="100%"><dl><dt><a name="-convert_nmap_output_to_encoding"><strong>convert_nmap_output_to_encoding</strong></a>(value, code<font color="#909090">='ascii'</font>)</dt><dd><tt>Change&nbsp;encoding&nbsp;for&nbsp;scan_result&nbsp;<a href="builtins.html#object">object</a>&nbsp;from&nbsp;unicode&nbsp;to&nbsp;whatever<br>
+<td width="100%"><dl><dt><a name="-__scan_progressive__"><strong>__scan_progressive__</strong></a>(self, hosts, ports, arguments, callback)</dt><dd><tt>Used&nbsp;by&nbsp;<a href="#PortScannerAsync">PortScannerAsync</a>&nbsp;for&nbsp;callback</tt></dd></dl>
+ <dl><dt><a name="-convert_nmap_output_to_encoding"><strong>convert_nmap_output_to_encoding</strong></a>(value, code<font color="#909090">='ascii'</font>)</dt><dd><tt>Change&nbsp;encoding&nbsp;for&nbsp;scan_result&nbsp;<a href="builtins.html#object">object</a>&nbsp;from&nbsp;unicode&nbsp;to&nbsp;whatever<br>
 &nbsp;<br>
 :param&nbsp;value:&nbsp;scan_result&nbsp;as&nbsp;dictionnary<br>
 :param&nbsp;code:&nbsp;default&nbsp;=&nbsp;"ascii",&nbsp;encoding&nbsp;destination<br>
@@ -558,7 +559,7 @@ Data descriptors inherited from <a href="nmap.html#PortScannerAsync">PortScanner
 <font color="#ffffff" face="helvetica, arial"><big><strong>Data</strong></big></font></td></tr>
     
 <tr><td bgcolor="#55aa55"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
-<td width="100%"><strong>__last_modification__</strong> = '2014.06.22'</td></tr></table><p>
+<td width="100%"><strong>__last_modification__</strong> = '2015.05.08'</td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#7799ee">
 <td colspan=3 valign=bottom>&nbsp;<br>
